init/ar80-mosquitto/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ar80-mosquitto-svc-nodeport
  namespace: ${THIS_NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mosquitto
  ports:    
  - name: mqtt
    port: 1883
    targetPort: 1883
    protocol: TCP
  - name: mqttws
    port: 9090
    targetPort: 9090
    protocol: TCP
