init/ar80-mosquitto/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ${THIS_CLUSTER_ISSUER}
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: ${THIS_CLUSTER_INGRESS}
    #traefik.ingress.kubernetes.io/router.middlewares: example-redirect-https@kubernetescrd
  labels:
    app.kubernetes.io/instance: ar80-mosquitto
  name: ar80-mosquitto
  namespace: ${THIS_NAMESPACE}
spec:
  ingressClassName: ${THIS_CLUSTER_INGRESS}
  rules:
  - host: ${THIS_AR80_MOSQUITTO_HOST}.${THIS_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: ar80-mosquitto-svc-nodeport
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ${THIS_AR80_MOSQUITTO_HOST}.${THIS_DOMAIN}
    secretName: chart-${THIS_NAMESPACE}-${THIS_AR80_MOSQUITTO_HOST}-tls
